crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__self_referencing_fk_snapshot@self_referencing_fk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Employees(models.Model):
    id = models.IntegerField(primary_key=True)
    manager = models.ForeignKey("Employees", on_delete=models.SET_NULL, related_name="+", null=True, blank=True)

    class Meta:
        db_table = "employees"
