crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__self_referencing_fk_snapshot@self_referencing_fk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Employees struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    ManagerID *int32 `gorm:"column:manager_id" json:"manager_id"`
    Manager *Employees `gorm:"foreignKey:ManagerID;constraint:OnDelete:SET NULL" json:"-"`
}

func (Employees) TableName() string { return "employees" }
