crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__self_referencing_fk_snapshot@self_referencing_fk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Employees {
  id Int @id
  manager_id Int?
  manager Employees? @relation("EmployeesManager", fields: [manager_id], references: [id], onDelete: SetNull)

  @@map("employees")
}
