crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__semicolon_default_snapshot@semicolon_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Notes(models.Model):
    id = models.IntegerField(primary_key=True)
    note = models.TextField(default="a;b")
    body = models.TextField()

    class Meta:
        db_table = "notes"
