crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_default_and_true_boolean_snapshot@server_default_and_true_boolean_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.utils import timezone
from django.db import models


class Logs(models.Model):
    id = models.AutoField(primary_key=True)
    active = models.BooleanField(default=True)
    created_at = models.DateTimeField(default=timezone.now)
    score = models.FloatField(default=1.5)
    tag = models.TextField()

    class Meta:
        db_table = "logs"
