crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_default_and_true_boolean_snapshot@server_default_and_true_boolean_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Logs {
  id Int @id @default(autoincrement())
  active Boolean @default(true)
  created_at DateTime @default(now()) @db.Timestamptz
  score Float @default(1.5) @db.Real
  tag String @default(dbgenerated("UNKNOWN_EXPR")) @db.Text

  @@map("logs")
}
