crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_defaults_snapshot@server_defaults_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.utils import timezone
from django.db import models


class WithDefaults(models.Model):
    id = models.IntegerField(primary_key=True)
    created_at = models.DateTimeField(default=timezone.now)
    status = models.TextField(default="active")
    count = models.IntegerField(default=0)

    class Meta:
        db_table = "with_defaults"
