crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_defaults_snapshot@server_defaults_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
    "time"
)

type WithDefaults struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    CreatedAt time.Time `gorm:"column:created_at;not null" json:"created_at"`
    Status string `gorm:"column:status;not null;type:text;default:'active'" json:"status"`
    Count int32 `gorm:"column:count;not null;default:0" json:"count"`
}

func (WithDefaults) TableName() string { return "with_defaults" }
