crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_defaults_snapshot@server_defaults_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model WithDefaults {
  id Int @id
  created_at DateTime @default(now()) @db.Timestamptz
  status String @default("active") @db.Text
  count Int @default(0)

  @@map("with_defaults")
}
